--- a/USAID_Data_Exploration_Selection .ipynb
+++ b/USAID_Data_Exploration_Selection .ipynb
@@ -241,7 +241,7 @@
    ],
    "source": [
     "# import train data\n",
-    "files_path = 'C:/Users/Pavel/Desktop/USAID_Data/train_test/train/'\n",
+    "files_path = '.../USAID_Data/train_test/train/'\n",
     "\n",
     "feat_names =['item_desc_tr', 'ctry_tr',\n",
     "             'vendor_tr', 'manu_site_tr',\n",
@@ -1109,7 +1109,7 @@
    "outputs": [],
    "source": [
     "# export selected train features\n",
-    "e_path = 'C:/Users/Pavel/Desktop/USAID_Data/selected features/'\n",
+    "e_path = '.../USAID_Data/selected features/'\n",
     "\n",
     "predictors = [s_objects,\n",
     "              s_num_log,\n",
@@ -1346,7 +1346,7 @@
    ],
    "source": [
     "#select test features\n",
-    "test_path = 'C:/Users/Pavel/Desktop/USAID_Data/train_test/test/'\n",
+    "test_path = '.../USAID_Data/train_test/test/'\n",
     "\n",
     "ts_feat_names =['item_desc_ts',\n",
     "                'ctry_ts',\n",
